[package]
name = "m5nano-embassy"
version = "0.1.0"
authors = ["Rate980 <2220208@ecc.ac.jp>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.17.0", features = ["async", "defmt", "embassy", "embassy-executor-thread", "embassy-time-systick-16mhz", "esp32c6"] }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.5.0", default-features = false, features = [
    "esp32c6",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
defmt-rtt = "0.4.0"
defmt = "0.3.6"
esp-backtrace = { version = "0.11.1", features = ["defmt", "esp32c6", "panic-handler"] }
embassy-executor = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "generic-queue"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
